--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ matplotlib==3.3.2
 networkx==2.5
 numpy==1.18.0
 opt-einsum==3.3.0
+pandas==1.1.5
 Pillow==8.0.0
 protobuf==3.13.0
 pyparsing==2.4.7
@@ -33,7 +34,7 @@ semantic-version==2.8.5
 six==1.15.0
 sklearn==0.0
 tensorboard==1.15.0
-tensorflow==1.15.4
+tensorflow-gpu==1.15
 tensorflow-estimator==1.15.1
 tensorflow-probability==0.8.0
 termcolor==1.1.0
